# daily_plan

./: .gitignore  README.md  build.bat  context-menu.html  desktop-analyze.html  downloads-analyze.html  index.html  package-lock.json  package.json  snap-line.html  test_cases.md  trash-context-menu.html  vite.config.ts  welcome.html
public/: welcome.html
scripts/: generate-welcome.js
src/: App.vue  ContextMenuApp.vue  TrashContextMenuApp.vue  context-menu-main.ts  context-menu-style.css  desktop-analyze-main.ts  downloads-analyze-main.ts  snap-line-main.ts  style.css  trash-context-menu-main.ts
src-tauri/: Cargo.toml  commit_msg.txt  installer.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clean_computer.rs  context_menu.rs  db.rs  desktop_sort.rs  lib.rs  main.rs  recycle_bin.rs  snap_line.rs  task_timer.rs  window.rs
src-tauri/src/desktop_sort/: common.rs  desktop_analyze.rs  desktop_window.rs  duplicate_cleaner.rs  folder_analyze.rs  folder_duplicate.rs  folder_window.rs  mod.rs
src-tauri/wix/: custom.wxs
src/components/: AddTaskBtn.vue  ContextMenu.vue  DesktopAnalyzeApp.vue  DownloadsAnalyzeApp.vue  MainMenu.vue  TaskItem.vue  TaskList.vue  TrashWindow.vue  WindowHeader.vue
src/components/Popups/: ColorPicker.vue  ConfirmDialog.vue  CountdownAlert.vue  TimeInput.vue
src/stores/: alerts.ts  cleanComputer.ts  taskStore.ts  tasks.ts  timers.ts  trash.ts  types.ts
