[package]
name = "daily-plan"
version = "0.1.0"
description = "每日计划管理工具"
authors = ["daily-plan"]
edition = "2021"
license = "MIT"
readme = "README.md"

[[bin]]
name = "daily-plan"
path = "src/main.rs"

[lib]
name = "daily_plan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image", "unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_System_SystemServices"] }
winapi = { version = "0.3", features = ["winuser", "wingdi", "windef", "dwmapi", "winreg"] }
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_SystemServices",
    "Win32_Storage_FileSystem",
] }
rusqlite = { version = "0.29", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "packed"
lto = true
codegen-units = 1
panic = "abort"
